# hw1_mlops_nlobachev

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
app/: main.py  ml_models.py  s3_utils.py  schemas.py
models/: 6d6f05c5-434a-4920-b01d-fecd9e4ca467.pkl
